--- a/ros_adas2019/package.xml
+++ b/ros_adas2019/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>ros_adas2019</name>
-  <version>1.0.0</version>
+  <version>1.0.1</version>
   <description>The ros_adas2019 package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
-  <maintainer email="aadc@fh-wedel.de">ros-aadc</maintainer>
+  <maintainer email="aadc@fh-wedel.de">FH-Wedel</maintainer>
 
   <license>GPLv3</license>
 
