--- a/ros_adas2019/CMakeLists.txt
+++ b/ros_adas2019/CMakeLists.txt
@@ -7,12 +7,13 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# dependencies
+# global dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(Boost COMPONENTS thread chrono REQUIRED) # TODO: use C++17 features rather than boost
- 
-set (ARDUINO_SOURCES
+
+# arduino soucres
+set(ARDUINO_SOURCES
   lib/arduino/SerialDeviceBoost.h
   lib/arduino/SerialDeviceBoost.cpp
   lib/arduino/arduino_com_client.h
@@ -21,25 +22,27 @@ set (ARDUINO_SOURCES
   src/ROSArduinoCommunicator.cpp
   src/ROSArduinoCommunicator.h
 )
+set(ARDUINO_LIBRARIES
+  Boost::thread Boost::chrono
+)
 
+# the Acuator node
 add_executable(Actuator 
   src/ActuatorNode.cpp 
   src/ActuatorNode.h
   ${ARDUINO_SOURCES}
 )
 ament_target_dependencies(Actuator rclcpp)
-target_link_libraries(Actuator Boost::thread Boost::chrono)
-#target_include_directories(Actuator PUBLIC
-#  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-#  $<INSTALL_INTERFACE:include>)
+target_link_libraries(Actuator ${ARDUINO_LIBRARIES})
 
+# the Odometry node
 add_executable(Odometry 
   src/OdometryNode.cpp 
   src/OdometryNode.h
   ${ARDUINO_SOURCES}
 )
 ament_target_dependencies(Odometry rclcpp)
-target_link_libraries(Odometry Boost::thread Boost::chrono)
+target_link_libraries(Odometry ${ARDUINO_LIBRARIES})
 # https://docs.ros.org/en/foxy/Tutorials/Custom-ROS2-Interfaces.html#create-custom-definitions
 find_package(rosidl_default_generators REQUIRED)
 find_package(geometry_msgs REQUIRED)
@@ -51,13 +54,22 @@ rosidl_generate_interfaces(${PROJECT_NAME}
 rosidl_target_interfaces(Odometry
   ${PROJECT_NAME} "rosidl_typesupport_cpp"
 )
-#target_include_directories(Odometry PUBLIC
-#  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-#  $<INSTALL_INTERFACE:include>)
 
+# the Battery node
+find_package(sensor_msgs REQUIRED)
+add_executable(Battery 
+  src/BatteryNode.cpp 
+  src/BatteryNode.h
+  ${ARDUINO_SOURCES}
+)
+ament_target_dependencies(Battery rclcpp sensor_msgs)
+target_link_libraries(Battery ${ARDUINO_LIBRARIES})
+
+# install all nodes
 install(TARGETS 
   Actuator 
   Odometry
+  Battery
   DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
