--- a/ros_adas2019/package.xml
+++ b/ros_adas2019/package.xml
@@ -7,6 +7,7 @@
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <maintainer email="aadc@fh-wedel.de">FH-Wedel</maintainer>
+  <url type="repository">https://github.com/FHW-AutonomousDriving/ros_adas2019</url>
 
   <license>GPLv3</license>
 
@@ -17,8 +18,9 @@
 
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
-  <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>image_transport</depend>
+  <depend>cv_bridge</depend>
   
   <!-- https://docs.ros.org/en/foxy/Tutorials/Custom-ROS2-Interfaces.html#create-custom-definitions -->
   <build_depend>rosidl_default_generators</build_depend>
@@ -26,9 +28,6 @@
   <member_of_group>rosidl_interface_packages</member_of_group>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
