--- a/ros_adas2019/package.xml
+++ b/ros_adas2019/package.xml
@@ -7,6 +7,7 @@
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <maintainer email="aadc@fh-wedel.de">FH-Wedel</maintainer>
+  <url type="repository">https://github.com/FHW-AutonomousDriving/ros_adas2019</url>
 
   <license>GPLv3</license>
 
@@ -26,9 +27,6 @@
   <member_of_group>rosidl_interface_packages</member_of_group>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
