--- a/ros_adas2019/package.xml
+++ b/ros_adas2019/package.xml
@@ -18,8 +18,9 @@
 
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
-  <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>image_transport</depend>
+  <depend>cv_bridge</depend>
   
   <!-- https://docs.ros.org/en/foxy/Tutorials/Custom-ROS2-Interfaces.html#create-custom-definitions -->
   <build_depend>rosidl_default_generators</build_depend>
