Adjustments for ROS2 "humble".

--- a/ros_adas2019/CMakeLists.txt
+++ b/ros_adas2019/CMakeLists.txt
@@ -11,6 +11,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
 
 # ROSArduinoCommunicator library
 find_package(Boost COMPONENTS thread chrono REQUIRED) # TODO: use C++17 features rather than boost
@@ -32,7 +33,7 @@ add_executable(Actuator
   src/ActuatorNode.cpp 
   src/ActuatorNode.hpp
 )
-ament_target_dependencies(Actuator rclcpp)
+ament_target_dependencies(Actuator rclcpp std_msgs)
 target_link_libraries(Actuator Arduino)
 
 # the Odometry node
@@ -45,14 +46,15 @@ target_link_libraries(Odometry Arduino)
 # https://docs.ros.org/en/foxy/Tutorials/Custom-ROS2-Interfaces.html#create-custom-definitions
 find_package(rosidl_default_generators REQUIRED)
 find_package(geometry_msgs REQUIRED)
-rosidl_generate_interfaces(${PROJECT_NAME}
-  "msg/Imu.msg"
-   DEPENDENCIES geometry_msgs
-)
-# https://discourse.ros.org/t/ros2-how-to-use-custom-message-in-project-where-its-declared/2071
-rosidl_target_interfaces(Odometry
-  ${PROJECT_NAME} "rosidl_typesupport_cpp"
-)
+rosidl_generate_interfaces(${PROJECT_NAME} "msg/Imu.msg" DEPENDENCIES geometry_msgs )
+if($ENV{ROS_DISTRO} STREQUAL "foxy")
+  # https://discourse.ros.org/t/ros2-how-to-use-custom-message-in-project-where-its-declared/2071
+  rosidl_target_interfaces(Odometry ${PROJECT_NAME} "rosidl_typesupport_cpp" )
+else()
+  # https://docs.ros.org/en/rolling/Tutorials/Beginner-Client-Libraries/Single-Package-Define-And-Use-Interface.html#use-an-interface-from-the-same-package
+  rosidl_get_typesupport_target(cpp_typesupport_target ${PROJECT_NAME} "rosidl_typesupport_cpp")
+  target_link_libraries(Odometry "${cpp_typesupport_target}")
+endif()
 
 # the Battery node
 add_executable(Battery 
